I'm not using maven

--- a/build.gradle
+++ b/build.gradle
@@ -58,15 +58,15 @@ publishing {
 	}
 }
 
-model {
-    tasks.generatePomFileForMyPublicationPublication {
-        destination = file("$buildDir/libs/${project.name}-${version}.pom")
-    }
-
-	tasks.assemble {
-		dependsOn tasks.generatePomFileForMyPublicationPublication
-	}
-}
+//model {
+//    tasks.generatePomFileForMyPublicationPublication {
+//        destination = file("$buildDir/libs/${project.name}-${version}.pom")
+//    }
+//
+//	tasks.assemble {
+//		dependsOn tasks.generatePomFileForMyPublicationPublication
+//	}
+//}
 
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
